@@ -1,9 +1,9 @@
 SCRIPT_NAME=elf
 ELFSIZE=32
 OUTPUT_FORMAT="elf32-hppa-linux"
-TEXT_START_ADDR=0x1000
-TARGET_PAGE_SIZE=0x1000
-MAXPAGESIZE=0x1000
+TEXT_START_ADDR=0x4000
+TARGET_PAGE_SIZE=0x4000
+MAXPAGESIZE=0x4000
 ARCH=hppa
 MACHINE=hppa1.1    # We use 1.1 specific features.
 NOP=0x08000240
